# ts-api/swagger_server/models/sample_summary_request_item.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class SampleSummaryRequestItem(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, _from: str=None, to: str=None):  # noqa: E501
+        """SampleSummaryRequestItem - a model defined in Swagger
+
+        :param _from: The _from of this SampleSummaryRequestItem.  # noqa: E501
+        :type _from: str
+        :param to: The to of this SampleSummaryRequestItem.  # noqa: E501
+        :type to: str
+        """
+        self.swagger_types = {
+            '_from': str,
+            'to': str
+        }
+
+        self.attribute_map = {
+            '_from': 'from',
+            'to': 'to'
+        }
+        self.__from = _from
+        self._to = to
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SampleSummaryRequestItem':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The SampleSummaryRequestItem of this SampleSummaryRequestItem.  # noqa: E501
+        :rtype: SampleSummaryRequestItem
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def _from(self) -> str:
+        """Gets the _from of this SampleSummaryRequestItem.
+
+
+        :return: The _from of this SampleSummaryRequestItem.
+        :rtype: str
+        """
+        return self.__from
+
+    @_from.setter
+    def _from(self, _from: str):
+        """Sets the _from of this SampleSummaryRequestItem.
+
+
+        :param _from: The _from of this SampleSummaryRequestItem.
+        :type _from: str
+        """
+
+        self.__from = _from
+
+    @property
+    def to(self) -> str:
+        """Gets the to of this SampleSummaryRequestItem.
+
+
+        :return: The to of this SampleSummaryRequestItem.
+        :rtype: str
+        """
+        return self._to
+
+    @to.setter
+    def to(self, to: str):
+        """Sets the to of this SampleSummaryRequestItem.
+
+
+        :param to: The to of this SampleSummaryRequestItem.
+        :type to: str
+        """
+
+        self._to = to
