# ts-api/swagger_server/models/sample_summary_response_item.py
@@ -1,0 +1,114 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class SampleSummaryResponseItem(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, _from: str=None, to: str=None, count: float=None):  # noqa: E501
+        """SampleSummaryResponseItem - a model defined in Swagger
+
+        :param _from: The _from of this SampleSummaryResponseItem.  # noqa: E501
+        :type _from: str
+        :param to: The to of this SampleSummaryResponseItem.  # noqa: E501
+        :type to: str
+        :param count: The count of this SampleSummaryResponseItem.  # noqa: E501
+        :type count: float
+        """
+        self.swagger_types = {
+            '_from': str,
+            'to': str,
+            'count': float
+        }
+
+        self.attribute_map = {
+            '_from': 'from',
+            'to': 'to',
+            'count': 'count'
+        }
+        self.__from = _from
+        self._to = to
+        self._count = count
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SampleSummaryResponseItem':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The SampleSummaryResponseItem of this SampleSummaryResponseItem.  # noqa: E501
+        :rtype: SampleSummaryResponseItem
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def _from(self) -> str:
+        """Gets the _from of this SampleSummaryResponseItem.
+
+
+        :return: The _from of this SampleSummaryResponseItem.
+        :rtype: str
+        """
+        return self.__from
+
+    @_from.setter
+    def _from(self, _from: str):
+        """Sets the _from of this SampleSummaryResponseItem.
+
+
+        :param _from: The _from of this SampleSummaryResponseItem.
+        :type _from: str
+        """
+
+        self.__from = _from
+
+    @property
+    def to(self) -> str:
+        """Gets the to of this SampleSummaryResponseItem.
+
+
+        :return: The to of this SampleSummaryResponseItem.
+        :rtype: str
+        """
+        return self._to
+
+    @to.setter
+    def to(self, to: str):
+        """Sets the to of this SampleSummaryResponseItem.
+
+
+        :param to: The to of this SampleSummaryResponseItem.
+        :type to: str
+        """
+
+        self._to = to
+
+    @property
+    def count(self) -> float:
+        """Gets the count of this SampleSummaryResponseItem.
+
+
+        :return: The count of this SampleSummaryResponseItem.
+        :rtype: float
+        """
+        return self._count
+
+    @count.setter
+    def count(self, count: float):
+        """Sets the count of this SampleSummaryResponseItem.
+
+
+        :param count: The count of this SampleSummaryResponseItem.
+        :type count: float
+        """
+
+        self._count = count
